--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -19,10 +20,10 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "pokenode-ts": "^1.18.3",
-    "postcss": "8.4.22",
+    "postcss": "^8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "^3.3.1",
     "typescript": "5.0.4"
   }
 }
